@@ -94,5 +94,7 @@ void hc08_emitDebuggerSymbol (const char *);
 extern unsigned fReturnSizeHC08;
 //extern char **fReturn;
 
+iCode *hasInchc08 (const operand *op, const iCode *ic, int osize);
+
 #endif
 
