@@ -1,4 +1,15 @@
-2012-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCralloc.hpp,
+	  src/SDCCicode.c,
+	  src/SDCCicode.h,
+	  src/z80/ralloc2.cc,
+	  src/hc08/gen.h,
+	  src/hc08/ralloc2.cc,
+	  src/hc08/gen.c:
+	  Improve hc08 cost function.
+
+2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/ralloc2.cc,
 	  src/hc08/gen.c:
